* Aug 04 2014 Massimiliano Pala <madwolf@openca.org>
- Updated to LibPKI 0.8.7 interface
- Fixed a double-free issue with HTTP GET requests
- Added proper pthread SIGPIPE handling

* May 10 2014 Massimiliano Pala <madwolf@openca.org>
- Fixed issue with generating responses with hardware tokens
- Updated support for LibPKI 0.8.5+

* Oct 07 2013 Massimiliano Pala <madwolf@openca.org>
- Fixed ocsp-genreq.sh script to correctly handle signing algorithm

* Oct 07 2013 Massimiliano Pala <madwolf@openca.org>
- Updated support for libpki 0.8.2
- Added extra checks option for the configure (--enable-extra-checks)
- Fixed all reported warnings

* Sep 24 2013 Massimiliano Pala <madwolf@openca.org>
- Fixed using ca-specific OCSPD server certificate (option was ignored)
- Updated support for libpki 0.8.2 to fix HTTP GET method support
- Updated configure.in to configure.ac script

* Aug 07 2013 Massimiliano Pala <madwolf@openca.org>
- Updated API for using OCSPD with libpki 0.8.0
- Added signatureDigestAlgorithm option in ocspd.xml config file to force signing digest algoritm

* Jun 13 2013 Massimiliano Pala <madwolf@openca.org>
- Updated API for using OCSPD with libpki 0.7.0+
- Improved logging for startup sequence (better report of errors during token loading)

* Jul 21 2011 Massimiliano Pala <madwolf@openca.org>
-Fixed a memory issue related to inappropriate usage of syslog() instead of
PKI_log()

* Mar 15 2011 Massimiliano Pala <madwolf@openca.org>
-Added '-testmode' switch to set the OCSP as a test responder: all signatures are invalidated by flipping the first bit in the signature

* Feb 10 2011 Massimiliano Pala <madwolf@openca.org>
-Updated default configuration files (default passin set to none)
-Enhanced support for ECDSA support

* Feb  9 2011 Massimiliano Pala <madwolf@openca.org>
-Updated thread management with builtin support from LibPKI 0.6.3
-Fixed start/stop script
-Added new method for token configuration passin -> none to avoid password
promptin at startup
